touchup to prevent fields being too wide.

--- a/geem/static/geem/css/app.css
+++ b/geem/static/geem/css/app.css
@@ -299,3 +299,6 @@ div.disjunction > ul.tabs {border:1px solid silver !important;}
 div.disjunction > ul.tabs > li {border-right:2px solid white !important;}
 
 span.postfix.units label {padding-left:5px;}
+
+/*Overriding Foundation */
+form .row .row {margin:0 !important;}
